// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SavedPlaysList /> renders an empty state with no plays 1`] = `
<View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="headerButton"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#fff",
            "fontSize": 30,
          },
          undefined,
          Object {
            "fontFamily": "material-community",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      󰨸
    </Text>
  </View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    useNativeDriver={true}
    visible={false}
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.5)",
          "bottom": 0,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderRadius": 10,
            "elevation": 10,
            "maxHeight": "80%",
            "maxWidth": "80%",
            "padding": 20,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.25,
            "shadowRadius": 3.84,
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 20,
              "fontWeight": "bold",
              "marginBottom": 20,
              "textAlign": "center",
            }
          }
        >
          Saved plays
        </Text>
        <RCTScrollView
          ListEmptyComponent={[Function]}
          data={Array []}
          disableVirtualization={false}
          getItem={[Function]}
          getItemCount={[Function]}
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          onContentSizeChange={[Function]}
          onEndReachedThreshold={2}
          onLayout={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={Array []}
          style={
            Object {
              "flexGrow": 0,
            }
          }
          updateCellsBatchingPeriod={50}
          viewabilityConfigCallbackPairs={Array []}
          windowSize={21}
        >
          <View>
            <View>
              <Text>
                You haven't saved any plays yet
              </Text>
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "transform": Array [
                Object {
                  "translateY": 48,
                },
              ],
              "zIndex": 99,
            }
          }
        />
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "#2a9e91",
              "borderRadius": 5,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "center",
              "marginTop": 20,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
              "width": 120,
            }
          }
          testID="button"
        >
          <Text
            style={
              Object {
                "color": "#2a9e91",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            Back
          </Text>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`<SavedPlaysList /> renders correctly with plays 1`] = `
<View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="headerButton"
  >
    <Text />
  </View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    useNativeDriver={true}
    visible={false}
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,0.5)",
          "bottom": 0,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderRadius": 10,
            "elevation": 10,
            "maxHeight": "80%",
            "maxWidth": "80%",
            "padding": 20,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.25,
            "shadowRadius": 3.84,
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 20,
              "fontWeight": "bold",
              "marginBottom": 20,
              "textAlign": "center",
            }
          }
        >
          Saved plays
        </Text>
        <RCTScrollView
          ListEmptyComponent={[Function]}
          data={
            Array [
              Object {
                "animation": Object {
                  "ids": Array [
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "triangle",
                    "offense",
                    "offense",
                    "offense",
                    "offense",
                    "offense",
                    "disc",
                  ],
                  "positions": Array [
                    Array [
                      Array [
                        Array [
                          0.3,
                          0.3,
                        ],
                      ],
                      Array [
                        Array [
                          0.3,
                          0.6,
                        ],
                      ],
                      Array [
                        Array [
                          0.6,
                          0.3,
                        ],
                      ],
                      Array [
                        Array [
                          0.6,
                          0.6,
                        ],
                      ],
                      Array [
                        Array [
                          0.45,
                          0.2,
                        ],
                      ],
                      Array [
                        Array [
                          0.2,
                          0.45,
                        ],
                      ],
                      Array [
                        Array [
                          0.45,
                          0.7,
                        ],
                      ],
                      Array [
                        Array [
                          0.7,
                          0.45,
                        ],
                      ],
                      Array [
                        Array [
                          0.3,
                          0.3,
                        ],
                      ],
                      Array [
                        Array [
                          0.16,
                          0.3,
                        ],
                      ],
                      Array [
                        Array [
                          0.6,
                          0.3,
                        ],
                      ],
                      Array [
                        Array [
                          0.6,
                          0.6,
                        ],
                      ],
                      Array [
                        Array [
                          0.3,
                          0.6,
                        ],
                      ],
                      Array [
                        Array [
                          0.36,
                          0.36,
                        ],
                      ],
                    ],
                    Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      Array [
                        Array [
                          0.45,
                          0.2,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                    ],
                    Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      Array [
                        Array [
                          0.6,
                          0.3,
                        ],
                      ],
                      Array [
                        Array [
                          0.7,
                          0.45,
                        ],
                      ],
                      undefined,
                      undefined,
                      Array [
                        Array [
                          0.58,
                          0.36,
                        ],
                      ],
                    ],
                    Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      Array [
                        Array [
                          0.6,
                          0.6,
                        ],
                      ],
                      Array [
                        Array [
                          0.45,
                          0.7,
                        ],
                      ],
                      undefined,
                      Array [
                        Array [
                          0.58,
                          0.58,
                        ],
                      ],
                    ],
                    Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      Array [
                        Array [
                          0.3,
                          0.6,
                        ],
                      ],
                      Array [
                        Array [
                          0.2,
                          0.45,
                        ],
                      ],
                      Array [
                        Array [
                          0.36,
                          0.58,
                        ],
                      ],
                    ],
                    Array [
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      Array [
                        Array [
                          0.45,
                          0.2,
                        ],
                      ],
                      undefined,
                      undefined,
                      undefined,
                      Array [
                        Array [
                          0.3,
                          0.3,
                        ],
                      ],
                      Array [
                        Array [
                          0.36,
                          0.36,
                        ],
                      ],
                    ],
                  ],
                  "texts": Array [
                    "",
                    "",
                    "",
                    "",
                    "",
                    "",
                    "",
                    "",
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                    "",
                  ],
                },
                "title": "Square",
              },
            ]
          }
          disableVirtualization={false}
          getItem={[Function]}
          getItemCount={[Function]}
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          onContentSizeChange={[Function]}
          onEndReachedThreshold={2}
          onLayout={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={Array []}
          style={
            Object {
              "flexGrow": 0,
            }
          }
          updateCellsBatchingPeriod={50}
          viewabilityConfigCallbackPairs={Array []}
          windowSize={21}
        >
          <View>
            <View
              onLayout={[Function]}
              style={null}
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "borderBottomColor": "#e5e5e5",
                      "borderBottomWidth": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "padding": 10,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flexBasis": "90%",
                      }
                    }
                  >
                    <Text>
                      Square
                    </Text>
                  </View>
                  <Text />
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "transform": Array [
                Object {
                  "translateY": 48,
                },
              ],
              "zIndex": 99,
            }
          }
        />
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "#2a9e91",
              "borderRadius": 5,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "center",
              "marginTop": 20,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
              "width": 120,
            }
          }
          testID="button"
        >
          <Text
            style={
              Object {
                "color": "#2a9e91",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            Back
          </Text>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;
